refactor : refactoring source  - remove zeroOrigin, nameColumn options  - remove unnecessary classis  - rename preprocess, postprocess